[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cae-pso"
version = "0.0.3"
authors = [
  { name="Ali Eftekhari Milani", email="aealieftekhary@gmail.com" },
]
description = "A Convolutional Autoencoder trained Using the PSO algorithm for extracting latent monotonic factors from multivariate time series"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License", # Update if you use a different license
    "Operating System :: OS Independent",
]

dependencies = [
    "absl-py==2.4.0",
    "astunparse==1.6.3",
    "certifi==2026.5.20",
    "cffi==2.0.0",
    "charset-normalizer==3.4.7",
    "deap==1.4.4",
    "flatbuffers==25.12.19",
    "gast==0.7.0",
    "google-pasta==0.2.0",
    "grpcio==1.80.0",
    "h5py==3.14.0",
    "idna==3.16",
    "keras==3.14.1",
    "libclang==18.1.1",
    "markdown-it-py==4.2.0",
    "mdurl==0.1.2",
    "ml_dtypes==0.5.4",
    "moocore==0.3.1",
    "namex==0.1.0",
    "numpy==2.4.6",
    "opt_einsum==3.4.0",
    "optree==0.19.1",
    "packaging==26.2",
    "pandas==3.0.3",
    "patsy==1.0.2",
    "platformdirs==4.9.6",
    "protobuf==7.35.0",
    "pycparser==3.0",
    "Pygments==2.20.0",
    "pymannkendall==1.4.3",
    "python-dateutil==2.9.0.post0",
    "requests==2.34.2",
    "rich==15.0.0",
    "scipy==1.17.1",
    "setuptools==82.0.1",
    "six==1.17.0",
    "statsmodels==0.14.6",
    "tensorflow==2.21.0",
    "termcolor==3.3.0",
    "typing_extensions==4.15.0",
    "tzdata==2026.2",
    "urllib3==2.7.0",
    "wheel==0.47.0",
    "wrapt==2.2.1",
]