[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cae-pso"
dynamic = ["version"]

authors = [
  { name="Ali Eftekhari Milani", email="aealieftekhary@gmail.com" },
]
description = "A Convolutional Autoencoder trained Using the PSO algorithm for extracting latent monotonic factors from multivariate time series"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License", # Update if you use a different license
    "Operating System :: OS Independent",
]

dependencies = [
    "deap>=1.4.0",
    "numpy>=2.0.0",
    "pandas>=2.0.0",
    "pymannkendall>=1.4.0",
    "statsmodels>=0.14.0",
    "tensorflow>=2.20.0"
]

[tool.setuptools.dynamic]
version = {attr = "cae_pso.__version__"}